--- a/Flights/Properties/launchSettings.json
+++ b/Flights/Properties/launchSettings.json
@@ -9,16 +9,7 @@
     }
   },
   "profiles": {
-    "http": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "applicationUrl": "http://localhost:5048",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "https": {
+    "Flights": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
