--- a/Flights/appsettings.json
+++ b/Flights/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Flights": "Data Source=localhost,50171;Database=Flights;User id=flights;Password=1234!Secret;Encrypt=false"
+  }
 }
